Rework user model and dirctory structure. Add email verification
Note: completely breaking change. Deleted previous migrations & starting over.
