# api/openapi.json
@@ -8,7 +8,7 @@
   "paths": {
     "/api/auth/register": {
       "post": {
-        "operationId": "osolot_server_routes_register",
+        "operationId": "osolot_server_api_auth_routes_register",
         "summary": "Register",
         "parameters": [],
         "responses": {
@@ -40,7 +40,7 @@
     },
     "/api/auth/login": {
       "post": {
-        "operationId": "osolot_server_routes_login",
+        "operationId": "osolot_server_api_auth_routes_login",
         "summary": "Login",
         "parameters": [],
         "responses": {
@@ -72,7 +72,7 @@
     },
     "/api/auth/refresh": {
       "post": {
-        "operationId": "osolot_server_routes_refresh",
+        "operationId": "osolot_server_api_auth_routes_refresh",
         "summary": "Refresh",
         "parameters": [],
         "responses": {
@@ -102,9 +102,142 @@
         }
       }
     },
+    "/api/auth/password-reset/request": {
+      "post": {
+        "operationId": "osolot_server_api_auth_routes_password_reset_request",
+        "summary": "Password Reset Request",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageOut"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PasswordResetRequestIn"
+              }
+            }
+          },
+          "required": true
+        }
+      }
+    },
+    "/api/auth/password-reset/confirm": {
+      "post": {
+        "operationId": "osolot_server_api_auth_routes_password_reset_confirm",
+        "summary": "Password Reset Confirm",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageOut"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PasswordResetConfirmIn"
+              }
+            }
+          },
+          "required": true
+        }
+      }
+    },
+    "/api/auth/verify-email/request": {
+      "post": {
+        "operationId": "osolot_server_api_auth_routes_email_verification_request",
+        "summary": "Email Verification Request",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageOut"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/VerifyEmailRequestIn"
+              }
+            }
+          },
+          "required": true
+        },
+        "security": [
+          {
+            "JWTAuth": []
+          }
+        ]
+      }
+    },
+    "/api/auth/verify-email/confirm": {
+      "post": {
+        "operationId": "osolot_server_api_auth_routes_email_verification_confirm",
+        "summary": "Email Verification Confirm",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageOut"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/VerifyEmailConfirmIn"
+              }
+            }
+          },
+          "required": true
+        }
+      }
+    },
     "/api/users/me": {
       "get": {
-        "operationId": "osolot_server_routes_me",
+        "operationId": "osolot_server_api_user_routes_me",
         "summary": "Me",
         "parameters": [],
         "responses": {
@@ -129,7 +262,7 @@
         ]
       },
       "patch": {
-        "operationId": "osolot_server_routes_update_me",
+        "operationId": "osolot_server_api_user_routes_update_me",
         "summary": "Update Me",
         "parameters": [],
         "responses": {
@@ -187,47 +320,43 @@
       },
       "RegisterIn": {
         "properties": {
-          "username": {
-            "maxLength": 150,
-            "minLength": 1,
-            "title": "Username",
-            "type": "string"
-          },
           "password": {
             "minLength": 8,
             "title": "Password",
             "type": "string"
           },
           "email": {
-            "anyOf": [
-              {
-                "maxLength": 254,
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Email"
+            "maxLength": 254,
+            "minLength": 1,
+            "title": "Email",
+            "type": "string"
           },
-          "name": {
+          "first_name": {
             "default": "",
-            "maxLength": 255,
-            "title": "Name",
+            "maxLength": 150,
+            "title": "First Name",
+            "type": "string"
+          },
+          "last_name": {
+            "default": "",
+            "maxLength": 150,
+            "title": "Last Name",
             "type": "string"
           }
         },
         "required": [
-          "username",
-          "password"
+          "password",
+          "email"
         ],
         "title": "RegisterIn",
         "type": "object"
       },
       "LoginIn": {
         "properties": {
-          "username": {
-            "title": "Username",
+          "email": {
+            "maxLength": 254,
+            "minLength": 1,
+            "title": "Email",
             "type": "string"
           },
           "password": {
@@ -236,7 +365,7 @@
           }
         },
         "required": [
-          "username",
+          "email",
           "password"
         ],
         "title": "LoginIn",
@@ -268,47 +397,153 @@
         "title": "RefreshIn",
         "type": "object"
       },
+      "MessageOut": {
+        "properties": {
+          "message": {
+            "title": "Message",
+            "type": "string"
+          }
+        },
+        "required": [
+          "message"
+        ],
+        "title": "MessageOut",
+        "type": "object"
+      },
+      "PasswordResetRequestIn": {
+        "properties": {
+          "email": {
+            "maxLength": 254,
+            "minLength": 1,
+            "title": "Email",
+            "type": "string"
+          }
+        },
+        "required": [
+          "email"
+        ],
+        "title": "PasswordResetRequestIn",
+        "type": "object"
+      },
+      "PasswordResetConfirmIn": {
+        "properties": {
+          "uid": {
+            "minLength": 1,
+            "title": "Uid",
+            "type": "string"
+          },
+          "token": {
+            "minLength": 1,
+            "title": "Token",
+            "type": "string"
+          },
+          "new_password": {
+            "minLength": 8,
+            "title": "New Password",
+            "type": "string"
+          }
+        },
+        "required": [
+          "uid",
+          "token",
+          "new_password"
+        ],
+        "title": "PasswordResetConfirmIn",
+        "type": "object"
+      },
+      "VerifyEmailRequestIn": {
+        "properties": {
+          "email": {
+            "maxLength": 254,
+            "minLength": 1,
+            "title": "Email",
+            "type": "string"
+          }
+        },
+        "required": [
+          "email"
+        ],
+        "title": "VerifyEmailRequestIn",
+        "type": "object"
+      },
+      "VerifyEmailConfirmIn": {
+        "properties": {
+          "uid": {
+            "minLength": 1,
+            "title": "Uid",
+            "type": "string"
+          },
+          "token": {
+            "minLength": 1,
+            "title": "Token",
+            "type": "string"
+          }
+        },
+        "required": [
+          "uid",
+          "token"
+        ],
+        "title": "VerifyEmailConfirmIn",
+        "type": "object"
+      },
       "UserOut": {
         "properties": {
           "id": {
             "title": "Id",
             "type": "integer"
           },
-          "username": {
-            "title": "Username",
-            "type": "string"
-          },
           "email": {
             "title": "Email",
             "type": "string"
           },
-          "name": {
-            "title": "Name",
+          "email_verified": {
+            "title": "Email Verified",
+            "type": "boolean"
+          },
+          "first_name": {
+            "title": "First Name",
+            "type": "string"
+          },
+          "last_name": {
+            "title": "Last Name",
             "type": "string"
           }
         },
         "required": [
           "id",
-          "username",
           "email",
-          "name"
+          "email_verified",
+          "first_name",
+          "last_name"
         ],
         "title": "UserOut",
         "type": "object"
       },
       "UserUpdateIn": {
         "properties": {
-          "name": {
+          "first_name": {
             "anyOf": [
               {
-                "maxLength": 255,
+                "maxLength": 150,
                 "type": "string"
               },
               {
                 "type": "null"
               }
             ],
-            "title": "Name"
+            "title": "First Name"
+          },
+          "last_name": {
+            "anyOf": [
+              {
+                "maxLength": 150,
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Last Name"
           }
         },
         "title": "UserUpdateIn",
